--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
+
+[build]
+publish = "build"
+command = "npm run build"
+base = "/"
+
 [[redirects]]
   from = "/proxy/*"
   to = "https://www.look-outside.ml/:splat"
